Edge bug fixed and title not wrapping

--- a/scss/app.scss
+++ b/scss/app.scss
@@ -117,7 +117,7 @@ button {
 }
 
 .info-header h2 {
-  font-size: 2.4rem;
+  font-size: 1.9rem;
   font-weight: 600;
 }
 
@@ -159,6 +159,11 @@ button {
     min-height: 100vh;
   }
   .col {
+    max-width: 650px;
+    position: relative;
+    top: -40px;
+  }
+  .col-sm-12 {
     max-width: 650px;
     position: relative;
     top: -40px;
@@ -244,7 +249,7 @@ button {
   }
 }
 
-/* ================== New Section ====================== */
+/* ================== Personal Projects Section ====================== */
 
 #pp-section {
   background-color: $secondary-color;
@@ -419,6 +424,12 @@ button {
       transition: all ease-in-out 300ms;
       transform: scale(1.1);
     }
+  }
+}
+
+@media (min-width: 400px) {
+  .info-header h2 {
+    font-size: 2.4rem;
   }
 }
 
